# HBTXR

./: .gitignore
analysis/annotation-analysis/: .gitignore  01_v2e_codebase_analysis.md  02_eveye_dataset_analysis.md  03_annotation_tool_evaluation.md  README.md  pyproject.toml
analysis/annotation-analysis/annotators/: README.md  deepvog.md  edge-guided-near-eye.md  ellseg.md  ritnet-plugins.md  sam3-i.md  x-anylabeling.md  x-anylabeling_pupil_models.md
analysis/annotation-analysis/docs/: 00_goal_and_context.md  01_status_and_roadmap.md  02_decision_log.md  03_worklog.md  04_samples_dataset.md  05_environment_and_gotchas.md  06_analysis_design.md  07_gsam2_audit_results.md  08_perframe_dataset.md  09_hbtxr_pred_results.md  10_gsam2_mislabel_analysis.md  11_eveye_dataset_provenance.md  12_gsam2_detection_harness.md  13_harness_implementation_plan.md  14_pupil_iris_confusion.md  15_annotator_accuracy.md  16_target_dataset_plan.md  17_progress_synthesis.md  README.md
analysis/annotation-analysis/results/: e0_schema_report.md  eval_Ei_Ui.csv  eval_tables.md  label_noise_gt_unet.md  label_noise_gt_unet_gsam2.md  label_shape_gt_unet_gsam2.md  rebuttal_draft.md
analysis/annotation-analysis/samples/: COLLECTION_PLAN.md  manifest_frames.csv  manifest_windows.csv
analysis/annotation-analysis/scripts/: 01_analyze_dataset.py  02_analyze_labels.py  03_analyze_tobii_gaze.py  04_analyze_tracking_results.py  05_eval_annotation_quality.py  06_v2e_synth_check.py  07_collect_samples.py  07b_reslice_events.py  08_run_gsam2.py  09_inject_pred.py  10_eval.py  10_label_noise.py  10b_shape_metrics.py  11_build_perframe.py  12_overlay.py  13_gsam2_mislabel.py  14_flag_gsam2_mislabel.py  15_eval_annotators.py  README.md  evlib.py  iris_fix_validate.py  requirements.txt  run_all.py
analysis/annotation-analysis/src/: build_target_dataset.py  crop_dataset.py  event_overlay.py  frame64.py  motion_label.py  render_all_masks.py
analysis/annotation-analysis/tables/: pairwise_agreement.csv  repeats_crosscheck.csv
analysis/annotation-analysis/weights/: ANNOTATOR_WEIGHTS.md  README.md  download_weights.sh
references/impl/FECET-HBTXR/: .gitignore  README.md  pyproject.toml  requirements.txt
references/impl/SWIFT-HBTXR/: .gitignore  (+3 more)
(+3635 files in other folders)
