[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fecet-hbtxr"
version = "0.1.0"
description = "Simplified FACET + HBTXR hybrid eye tracking baseline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["fecet_hbtxr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
